tests/paczka1/fuzzy1/75952447.err
Error in line 5: mqB S421 18,9
Error in line 13: nAvV S86 60,4
